--- a/src/pages/weekly/weekly.html
+++ b/src/pages/weekly/weekly.html
@@ -13,10 +13,16 @@
    
   
 <button ion-button color="Primary" round outline block (click)="forecast(location.value)">Forecast</button>
-  </ion-list>
-  <p>Mon Tues Wed Thur Fri Sat</p>
+<br>   
+<div class="text">
+  <p>Mon 
+    Tues 
+    Wed 
+    Thur 
+    Fri 
+    Sat</p>
   
 {{temperature}} {{temperature1}} {{temperature2}} {{temperature3}} {{temperature4}}
-
+</div>
  
 </ion-content>
